calcoli presentati su colonne

--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
             <p class="risultati-calcoli">Raggio orizzonte degli eventi<br><span id="raggioOrizzonteEventi" class="grassetto"></span> m</p>
             <p class="risultati-calcoli">Rallentamento del tempo<br><span id="percentualeRallentamento" class="grassetto"></span>%</p>
             <p class="risultati-calcoli">Moltiplicatore del tempo<br><span id="moltiplicatore" class="grassetto"></span>x</p>
-            <p class="spazio-paragrafo">Calcolo della dilatazione temporale</p>
+            <p class="spazio-paragrafo">Calcolo della dilatazione temporale per un osservatore lontano</p>
 
             <div class="risultati">
                 <div class="risultati-unita">
-                    <p>Un'ora attorno al buco nero</p>
+                    <div>
+                        <p>1 ora</p>
+                        <p><span class="text-small">vicino al buco nero</span></p>
+                    </div>
                 </div>
                 <div class="risultati-tempo">
                     <div class="risultati-tempo-blocco">
